--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
   <link rel="icon" href="logo.png">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-  <title>HAMMER</title>
+  <title>RARITY</title>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
@@ -62,9 +62,11 @@
           <a th:href="@{?locale=eng}" class="nav-link "><i class="fa fa-home"></i>eng</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input style="margin-bottom:auto " type="text" class="form-control mr-sm 2" th:placeholder="#{label.find}" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0"
+      <form class="form-inline my-2 my-lg-0" method="post" action="/search">
+        <input style="margin-bottom:auto " name="strSearch" type="text" class="form-control mr-sm 2" th:placeholder="#{label.find}" aria-label="Search"
+               title="Используйте буквы кириллицы" pattern="^[А-ЯЁа-яё]+$" required>
+
+        <button class="btn btn-outline-success my-2 my-sm-0"  type="submit"
                 style="margin: 0 0 0 10px; /*padding-left: 30px; padding-right: 30px*/" th:text="#{label.find}"></button>
       </form>
     </div>
@@ -72,7 +74,16 @@
 </nav>
 
 <br/>
-<div class="cards" id = "out"></div>
+<div class="cards">
+  <div class="card" th:each="el : ${products}"><div style="border:2px solid #ccc;width: 300px; color:#000000">
+    <p><img th:src="@{${el.getPhoto()}}" alt="" width="297" height="297"></p>
+    <label>Название: </label><p th:text="${el.getName()}"></p>
+    <label>Цена: </label><p th:text="${el.getPrice()}"></p>
+    <label>Количество: </label><p th:text="${el.getQuant()}"></p>
+    <p><a th:href="@{/index/id={p}(p=${el.getId()})}" class="btn btn-primary" >Посмотреть</a></p>
+
+  </div></div>
+</div>
 
 
 
