--- a/src/main/resources/templates/verification.html
+++ b/src/main/resources/templates/verification.html
@@ -9,22 +9,22 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="font-awesome.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Cuprum" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="/logo.png">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
           integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <title>HAMMER</title>
+    <title>RARITY</title>
 </head>
-<body>
+
 <body style="background: url(bg-body.jpg);">
 <div id="index"></div>
 <nav class="navbar navbar-expand-lg navbar-light" style="border-bottom: 1px solid #E1E1E1;">
     <div class="container">
-        <a href="index" class="navbar-brand">
-            <img src="logo.png" width="120px" height="120px" alt="logo">
+        <a href="/index" class="navbar-brand">
+            <img src="/logo.png" width="120px" height="120px" alt="logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expended="false" aria-label="Toggle navigation">
@@ -33,26 +33,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto nav-icon">
                 <li class="nav-item active">
-                    <a href="index" class="nav-link "><i class="fa fa-home"></i><p th:text="#{label.main}"></p></a>
+                    <a href="/index" class="nav-link "><i class="fa fa-home"></i><p th:text="#{label.main}"></p></a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" id="navbarDropdown" role="button"
-                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i
-                            class="fa fa-info"></i><p th:text="#{label.category}"></p></a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/antikiick"><p th:text="#{label.antiquesAndArt}"></p></a>
-                        <a class="dropdown-item" href="/vintag"><p th:text="#{label.vintage}"></p></a>
-                        <a class="dropdown-item" href="/collec"><p th:text="#{label.collection}"></p></a>
-                        <a class="dropdown-item" href="/sdelsruk"><p th:text="#{label.handmade}"></p></a>
-                        <a class="dropdown-item" href="/dragiukr" ><p th:text="#{label.drag}"></p></a>
-                    </div>
-                </li>
+
                 <li class="nav-item active">
-                    <a href="login" class="nav-link "><i class="fa fa-home"></i><p th:text="#{label.signin}"></p></a>
+                    <a href="/login" class="nav-link "><i class="fa fa-home"></i><p th:text="#{label.signin}"></p></a>
                 </li>
-                <li class="nav-item active">
-                    <a href="lk" class="nav-link "><i class="fa fa-home"></i><p th:text="#{label.lk}"></p></a>
-                </li>
+
                 <li class="nav-item active">
                     <a th:href="@{?locale=ru}" class="nav-link "><i class="fa fa-home"></i>ru</a>
                 </li>
@@ -60,20 +47,36 @@
                     <a th:href="@{?locale=eng}" class="nav-link "><i class="fa fa-home"></i>eng</a>
                 </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input style="margin-bottom:auto " type="text" class="form-control mr-sm 2" th:placeholder="#{label.find}" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0"
-                        style="margin: 0 0 0 10px; /*padding-left: 30px; padding-right: 30px*/" th:text="#{label.find}"></button>
-            </form>
+
         </div>
     </div>
 </nav>
 <div>
+    <div class="contain" style="width: 25%">
     <form action="verification" method="post">
-        <input type="text" name="code" placeholder="введите код из почты"/>
-        <button type="submit">добавить</button>
+        </br></hr>
+        <label style="color:#000000;font-size: 14px;"><b>Введите код, отправленный на Email</b></label>
+        <input type="text" name="code" placeholder="введите код" pattern="[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}" required/>
+        </hr>
+        <button type="submit" class="vhodbtn">Подтвердить</button>
     </form>
+    </div>
 </div>
-</body>
+
+
+<script src="/js/jquery-3.4.1.min.js"></script>
+<script src="https://kit.fontawesome.com/f54fd41071.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+<script src="/js/main.js"></script>
+<script type="text/javascript" src="/js/mainAjax.js"></script>
+
 </body>
 </html>
